# ks-mapper

./: .gitignore  Cargo.toml  mapper_objects.toml  todo.txt
.cargo/: config.toml
Knytt Stories/Worlds/Lit Knob - 3-20 & 14-1 Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Artifact Combination Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Bank 7 Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Bubble Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Combination Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Custom Collectables Test/: DefaultSavegame.ini  World.ini
Knytt Stories/Worlds/Lit Knob - Global Sync Test/: DefaultSavegame.ini  World.ini
Knytt Stories/Worlds/Lit Knob - Laser Visibility Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Layer Test/: DefaultSavegame.ini  World.ini
Knytt Stories/Worlds/Lit Knob - Object Test/: DefaultSavegame.ini  World.ini
Knytt Stories/Worlds/Lit Knob - Out of Range Test/: World.ini
Knytt Stories/Worlds/Lit Knob - Shift Test/: World.ini
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  timing.rs
ks_render_map/: Cargo.toml
ks_render_map/src/: definitions.rs  screen_map.rs  synchronization.rs
ks_render_map/src/drawing/: bank0.rs  bank1.rs  bank2.rs  bank8.rs  mod.rs
ks_render_map/src/graphics/: mod.rs
ks_render_map/src/partition/: bounds.rs  grid.rs
ksmap/: Cargo.toml
ksmap/src/: analysis.rs  definitions.rs  id.rs  lib.rs  screen_map.rs  seed.rs  synchronization.rs  timespan.rs
ksmap/tests/: verify_seeds.rs
test_seeds/: index.toml
xtask/: Cargo.toml
xtask/src/: main.rs  paths.rs
(+17 files in other folders)
